--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,15 @@ chardet==4.0.0
 colorama==0.4.4
 distlib==0.3.1
 Django==3.1.7
+django-cors-headers==3.7.0
+djangorestframework==3.12.4
 filelock==3.0.12
 idna==2.10
 iniconfig==1.1.1
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-packaging==20.8
+packaging==20.9
 pipenv==2020.11.15
 pluggy==0.13.1
 py==1.10.0
